Source/WebCore/bindings/v8/DOMDataStore.cpp
@@ -31,28 +31,51 @@
 #include "config.h"
 #include "DOMDataStore.h"
 
-#include "StaticDOMDataStore.h"
+#include "DOMWrapperMap.h"
+#include "IntrusiveDOMWrapperMap.h"
 #include "V8Binding.h"
 #include "WebCoreMemoryInstrumentation.h"
 #include <wtf/MainThread.h>
 
 namespace WebCore {
 
-DOMDataStore::DOMDataStore()
-    : m_domNodeMap(0)
-    , m_activeDomNodeMap(0)
-    , m_domObjectMap(0)
-    , m_activeDomObjectMap(0)
+DOMDataStore::DOMDataStore(Type type)
+    : m_type(type)
 {
+    if (type == MainWorld) {
+        m_domNodeMap = adoptPtr(new DOMNodeWrapperMap);
+        m_activeDomNodeMap = adoptPtr(new ActiveDOMNodeWrapperMap);
+    } else {
+        ASSERT(type == IsolatedWorld || type == Worker);
+        // FIXME: In principle, we shouldn't need to create these
+        // wrapper maps for workers because there are no Nodes on
+        // worker threads.
+        m_domNodeMap = adoptPtr(new DOMWrapperHashMap<Node>);
+        m_activeDomNodeMap = adoptPtr(new DOMWrapperHashMap<Node>);
+    }
+    m_domObjectMap = adoptPtr(new DOMWrapperHashMap<void>);
+    m_activeDomObjectMap = adoptPtr(new DOMWrapperHashMap<void>);
+
+    V8PerIsolateData::current()->registerDOMDataStore(this);
 }
 
 DOMDataStore::~DOMDataStore()
 {
+    ASSERT(m_type != MainWorld); // We never actually destruct the main world's DOMDataStore.
+
+    V8PerIsolateData::current()->unregisterDOMDataStore(this);
+
+    if (m_type == IsolatedWorld) {
+        m_domNodeMap->clear();
+        m_activeDomNodeMap->clear();
+    }
+    m_domObjectMap->clear();
+    m_activeDomObjectMap->clear();
 }
 
 DOMDataStore* DOMDataStore::current(v8::Isolate* isolate)
 {
-    DEFINE_STATIC_LOCAL(StaticDOMDataStore, defaultStore, ());
+    DEFINE_STATIC_LOCAL(DOMDataStore, defaultStore, (MainWorld));
     V8PerIsolateData* data = V8PerIsolateData::from(isolate);
     if (UNLIKELY(!!data->domDataStore()))
         return data->domDataStore();
@@ -65,10 +88,10 @@ DOMDataStore* DOMDataStore::current(v8::Isolate* isolate)
 void DOMDataStore::reportMemoryUsage(MemoryObjectInfo* memoryObjectInfo) const
 {
     MemoryClassInfo info(memoryObjectInfo, this, WebCoreMemoryTypes::Binding);
-    info.addWeakPointer(m_domNodeMap);
-    info.addWeakPointer(m_activeDomNodeMap);
-    info.addWeakPointer(m_domObjectMap);
-    info.addWeakPointer(m_activeDomObjectMap);
+    info.addMember(m_domNodeMap);
+    info.addMember(m_activeDomNodeMap);
+    info.addMember(m_domObjectMap);
+    info.addMember(m_activeDomObjectMap);
 }
 
 } // namespace WebCore
