Source/WebCore/bindings/v8/WorkerScriptController.cpp
@@ -60,15 +60,15 @@ WorkerScriptController::WorkerScriptController(WorkerContext* workerContext)
     , m_executionScheduledToTerminate(false)
 {
     V8PerIsolateData* data = V8PerIsolateData::create(m_isolate);
-    data->allStores().append(&m_DOMDataStore);
-    data->setDOMDataStore(&m_DOMDataStore);
     m_isolate->Enter();
+    m_domDataStore = adoptPtr(new DOMDataStore(DOMDataStore::Worker));
+    data->setDOMDataStore(m_domDataStore.get());
     m_proxy = adoptPtr(new WorkerContextExecutionProxy(workerContext));
 }
 
 WorkerScriptController::~WorkerScriptController()
 {
-    removeAllDOMObjects();
+    m_domDataStore.clear();
 #if PLATFORM(CHROMIUM)
     // The corresponding call to didStartWorkerRunLoop is in
     // WorkerThread::workerThread().
